tests/fail/enum_newtype.rs
use beerec_variants::Variants;

#[derive(Variants)]
pub enum Enum {
    Variant(usize),
}

fn main() {}
